2020/Day3/.antlr/Day3Parser.java
// Generated from /Users/etiennecosta/Desktop/AOC/Day3/Day3.g4 by ANTLR 4.8
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class Day3Parser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		WS=1, MAP=2;
	public static final int
		RULE_lines = 0, RULE_line = 1;
	private static String[] makeRuleNames() {
		return new String[] {
			"lines", "line"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "WS", "MAP"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Day3.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public Day3Parser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class LinesContext extends ParserRuleContext {
		public List <String> mapOut;
		public List<LineContext> line() {
			return getRuleContexts(LineContext.class);
		}
		public LineContext line(int i) {
			return getRuleContext(LineContext.class,i);
		}
		public LinesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lines; }
	}

	public final LinesContext lines() throws RecognitionException {
		LinesContext _localctx = new LinesContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_lines);

		                ((LinesContext)_localctx).mapOut =  new ArrayList<>();
		            
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(4);
			line(_localctx.mapOut);
			setState(8);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==MAP) {
				{
				{
				setState(5);
				line(_localctx.mapOut);
				}
				}
				setState(10);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}

			                                
			                                    int trees = 0;
			                                    int level = 0;
			                                    int position=0;
			                                    int size = _localctx.mapOut.size()-2;

			                                    while(size>=0 ){

			                                       position+=3;
			                                       level++;

			                                        if(_localctx.mapOut.get(level).charAt(position)=='#')
			                                            trees++;

			                                        size--;
			                                    }

			                                    System.out.println("Number of trees: "+trees);

			                                    
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LineContext extends ParserRuleContext {
		public List <String> mapIn;
		public Token MAP;
		public TerminalNode MAP() { return getToken(Day3Parser.MAP, 0); }
		public LineContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public LineContext(ParserRuleContext parent, int invokingState, List <String> mapIn) {
			super(parent, invokingState);
			this.mapIn = mapIn;
		}
		@Override public int getRuleIndex() { return RULE_line; }
	}

	public final LineContext line(List <String> mapIn) throws RecognitionException {
		LineContext _localctx = new LineContext(_ctx, getState(), mapIn);
		enterRule(_localctx, 2, RULE_line);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(13);
			((LineContext)_localctx).MAP = match(MAP);


			                            String s = (((LineContext)_localctx).MAP!=null?((LineContext)_localctx).MAP.getText():null);

			                            for(int i=0;i<5;i++)
			                                s = s.concat(s);
			                              
			                            _localctx.mapIn.add(s);
			                            
			                                
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static final ATN _ATN =
		new ATNDeserializer().deserialize(_serializedATN.toCharArray());
	static {
		_decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
		for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
			_decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
		}
	}
}